--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,7 @@
   <tr>
     <th>Title</th>
     <th>Body</th>
+    <th>Nr. Comments</th>
     <th></th>
     <th></th>
     <th></th>
@@ -13,6 +14,7 @@
   <tr>
     <td><%= post.title %></td>
     <td><%= post.body %></td>
+    <td><%= post.comments.count %></td>
     <td><%= link_to 'Show', post %></td>
     <td><%= link_to 'Edit', edit_post_path(post) %></td>
     <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
