--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
 	<b>Comments:</b></p>
 	<% @post.comments.each do |comment| %>
 	<p><%= comment.content %></p>
-	<p><%= t.strftime  comment.created_at %></p>
+	<p><%= @post.created_at.strftime("Created on %d/%m/%Y") %></p>
 	<%= link_to "delete comment", [@post, comment], :method => :delete, :confirm => "are you sure ?" %>
 	<% end %>
 
